// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default WeatherBlock - error 1`] = `
<div
  className="weather-block--mini card"
>
  Server error
</div>
`;

exports[`Default WeatherBlock - loaded 1`] = `
<div
  className="weather-block--mini card"
>
  <div
    className="card-body"
  >
    <div
      className="m-0 d-flex justify-content-between align-items-center row"
    >
      <div
        className="d-flex pl-0 align-items-center col-md-9"
      >
        <p
          className="city-temperature-mini-block__city-name mr-5 mb-0"
        >
          Msk
        </p>
        <span
          className="city-temperature-mini-block__temperature mr-1"
        >
          10
          °C
        </span>
        <img
          alt="icon"
          height="45"
          src="https://openweathermap.org/img/wn/01n.png"
        />
      </div>
      <div
        className="col"
      >
        <div
          className=" d-flex justify-content-end p-0 m-0"
        >
          <button
            className="circle-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            X
          </button>
        </div>
      </div>
    </div>
    <div
      className="container"
    >
      <div
        className="measure-block-item measure-block-item--blue d-flex mt-md-1 justify-content-between row"
      >
        <div
          className="col"
        >
          Wind
        </div>
        <div
          className="d-flex justify-content-end font-weight-light col"
        >
          10 m/s
        </div>
      </div>
      <div
        className="measure-block-item measure-block-item--red d-flex mt-md-1 justify-content-between row"
      >
        <div
          className="col"
        >
          Clouds
        </div>
        <div
          className="d-flex justify-content-end font-weight-light col"
        >
          20 %
        </div>
      </div>
      <div
        className="measure-block-item measure-block-item--yellow d-flex mt-md-1 justify-content-between row"
      >
        <div
          className="col"
        >
          Pressure
        </div>
        <div
          className="d-flex justify-content-end font-weight-light col"
        >
          30 hpa
        </div>
      </div>
      <div
        className="measure-block-item measure-block-item--green d-flex mt-md-1 justify-content-between row"
      >
        <div
          className="col"
        >
          Humidity
        </div>
        <div
          className="d-flex justify-content-end font-weight-light col"
        >
          40 %
        </div>
      </div>
      <div
        className="measure-block-item measure-block-item--pink d-flex mt-md-1 justify-content-between row"
      >
        <div
          className="col"
        >
          Coordinates
        </div>
        <div
          className="d-flex justify-content-end font-weight-light col"
        >
          [50, 60]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Default WeatherBlock - not loaded 1`] = `
<div
  className="weather-block--mini d-flex align-items-center justify-content-center"
>
  <div
    className="preloader"
  />
</div>
`;
